--- a/manifest.json
+++ b/manifest.json
@@ -2,5 +2,25 @@
     "name": "Ad Identifier",
     "description": "Identify ads and show number of ads for eachp page",
     "version": "1.0",
-    "manifest_version": 3
+    "manifest_version": 3,
+    "background" : {
+        "service_worker": "background.js"
+    },
+    "permissions": ["storage", "activeTab", "scripting"],
+    "action": {
+        "default_popup": "popup.html",
+        "default_icon": {
+            "16": "/images/get_started16.png",
+            "32": "/images/get_started32.png",
+            "48": "/images/get_started48.png",
+            "128": "/images/get_started128.png"
+        }
+    },
+    "icons": {
+        "16": "/images/get_started16.png",
+        "32": "/images/get_started32.png",
+        "48": "/images/get_started48.png",
+        "128": "/images/get_started128.png"
+    },
+    "options_page": "options.html"
 }
